# Coreugate

./: MANIFEST.in  README.md  Snakefile  cgMLST_pipeline.nf  config.yaml  coreugate.nf  nextflow.config  setup.cfg  setup.py  tasks.py  test_coreugate.py
coreugate/: Coreugate.py  coreugate.py  run.py
coreugate/templates/: config.yaml  distances.R  pad.R
coreugate/utils/: Snakefile  combine_chewie.py  config.j2  config.j2.yaml  main.nf
templates/: min_contig_size.py
test/: test_link.txt
