name = coreugate
author = Kristy Horan
author_email = kristyhoran15@gmail.com
description = calculate pair-wise allelic distances from cgMLST implements chewBBACAs
version = 2.0.0
url = https://github.com/kristyhoran/coreugate
classifiers =
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Development Status :: 4 - Beta 
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.7
packages = find:
zip_safe: False

install_requires =
    pytest
    jinja2
    biopython>=1.70
    pandas>=0.25.0
    numpy
    psutil
    sh
    packaging
    # snakemake>=5.9.1
    # configargparse
include_package_data = True
[options.extras_require]
tests =
  pytest
  flake8

[options.entry_points]
console_scripts =
 coreugate=coreugate.run:main

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9